// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Answer /> should renders 1`] = `
.c2 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
}

.c2 > *:first-child {
  margin-top: 0;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c10 {
  padding: 2rem 0;
  color: #3e486e;
}

.c3 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  position: relative;
  padding: 4rem;
  background-color: #fff;
}

.c3:before {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: 100%;
  height: 30rem;
  border: none;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 5rem rgba(121,148,212,0.12),0 1rem 1.5rem rgba(121,148,212,0.1);
  content: "";
}

.c3 > *:first-child {
  margin-top: 0;
}

.c3 > *:last-child {
  margin-bottom: 0;
}

.c11 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  background-color: #f2f5fa;
}

.c11 > *:first-child {
  margin-top: 0;
}

.c11 > *:last-child {
  margin-bottom: 0;
}

.c6 {
  position: absolute;
  background-color: #7994d4;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c5 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 3.2rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 4rem;
}

.c12 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c4 {
  margin: 0 auto 1rem;
  margin-left: -4rem;
  text-align: left;
}

.c14 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #7994d4;
  border-color: #7994d4;
  box-shadow: 0px 10px 30px rgba(121,148,212,0.26),0px 4px 5px rgba(121,148,212,0.35);
  opacity: 1;
}

.c14:link,
.c14:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c14:not([disabled]):hover,
.c14:not([disabled]):active,
.c14:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #a0b3e0;
  border-color: #a0b3e0;
}

.c14[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.4rem;
}

.c8 {
  margin: 3.2rem 0 0 0;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c16 + .c15 {
  margin-left: 1.6rem;
}

.c0 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  padding: 0;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  width: 80%;
}

.c9 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  background-color: #f2f5fa;
  margin: 1.6rem auto;
}

.c9 > *:first-child {
  margin-top: 0;
}

.c9 > *:last-child {
  margin-bottom: 0;
}

@media print {
  .c2 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c3 {
    padding: 1.6rem 2rem;
  }
}

@media print {
  .c3 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c11 {
    padding: 1.6rem 2rem;
  }
}

@media print {
  .c11 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c5 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c5 {
    font-size: 2.8rem;
  }
}

@media (max-width:600px) {
  .c12 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c4 {
    margin-left: 0;
  }
}

@media (max-width:600px) {
  .c14 {
    font-size: 1.4rem;
  }
}

@media (max-width:600px) {
  .c7 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:980px) {
  .c1 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c9 {
    padding: 1.6rem 2rem;
  }
}

@media print {
  .c9 {
    padding: 0 5pt;
    border: none;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
          data-main-content="true"
        >
          <header
            class="c4"
          >
            <h1
              class="c5"
            >
              <div
                class="c6"
              />
              Article du code
            </h1>
          </header>
          <div
            class="c7"
          >
            <span>
              Mis à jour le : 
              03/11/1979
            </span>
          </div>
          <div
            class="c8"
          >
            <div
              class="c9"
            >
              intro de l'article
            </div>
            <div>
              <p
                class="test-content"
              >
                Contenu au format 
                <strong>
                  html
                </strong>
              </p>
            </div>
            <div>
              Contenu supplémentaire
            </div>
          </div>
        </div>
      </div>
      <div
        class="c10"
      >
        <div
          class="c2"
        >
          <div
            class="c11"
          >
            <h3
              class="c12"
            >
              Avez-vous trouvé la réponse à votre question ?
            </h3>
            <p
              class="c13"
            >
              <button
                class="c14 c15 c16"
              >
                Non
              </button>
              <button
                class="c14 c15 c16"
              >
                Oui
              </button>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Answer /> should renders a breadcrumbs 1`] = `
.c10 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
}

.c10 > *:first-child {
  margin-top: 0;
}

.c10 > *:last-child {
  margin-bottom: 0;
}

.c19 {
  padding: 2rem 0;
  color: #3e486e;
}

.c11 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  position: relative;
  padding: 4rem;
  background-color: #fff;
}

.c11:before {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: 100%;
  height: 30rem;
  border: none;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 5rem rgba(121,148,212,0.12),0 1rem 1.5rem rgba(121,148,212,0.1);
  content: "";
}

.c11 > *:first-child {
  margin-top: 0;
}

.c11 > *:last-child {
  margin-bottom: 0;
}

.c20 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  background-color: #f2f5fa;
}

.c20 > *:first-child {
  margin-top: 0;
}

.c20 > *:last-child {
  margin-bottom: 0;
}

.c15 {
  position: absolute;
  background-color: #7994d4;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c14 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 3.2rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 4rem;
}

.c21 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c12 {
  display: block;
  margin: 0 0 1rem 0;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.2rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
  text-transform: uppercase;
}

.c13 {
  margin: 0 auto 1rem;
  margin-left: -4rem;
  text-align: left;
}

.c23 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #7994d4;
  border-color: #7994d4;
  box-shadow: 0px 10px 30px rgba(121,148,212,0.26),0px 4px 5px rgba(121,148,212,0.35);
  opacity: 1;
}

.c23:link,
.c23:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c23:not([disabled]):hover,
.c23:not([disabled]):active,
.c23:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #a0b3e0;
  border-color: #a0b3e0;
}

.c23[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c1 {
  position: relative;
  overflow: hidden;
}

.c1:before,
.c1:after {
  position: absolute;
  top: 0;
  bottom: 0;
  display: block;
  width: 4rem;
  opacity: 0;
  -webkit-transition: opacity 0.3s linear;
  transition: opacity 0.3s linear;
  content: "";
  pointer-events: none;
  background: radial-gradient( ellipse at center, #fff 15%, rgba(255,255,255,0) 80% );
}

.c1:before {
  left: -2rem;
}

.c1:after {
  right: -2rem;
}

.c2 {
  overflow-x: auto;
}

.c16 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.4rem;
}

.c17 {
  margin: 3.2rem 0 0 0;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c25 + .c24 {
  margin-left: 1.6rem;
}

.c0 {
  margin-bottom: 1rem;
}

.c3 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 > *:first-child {
  margin-top: 0;
}

.c3 > *:last-child {
  margin-bottom: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0 1rem 0 0;
  white-space: nowrap;
}

.c4:first-of-type {
  padding-left: 0;
}

.c7 {
  width: 1.2rem;
  height: 1.2rem;
  margin-right: 1rem;
  color: #7994d4;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c5:focus,
.c5:hover,
.c5:active {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c6 {
  width: 2rem;
  height: 2rem;
  margin-right: 1rem;
  color: #7994d4;
}

.c8 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  padding: 0;
}

.c8 > *:first-child {
  margin-top: 0;
}

.c8 > *:last-child {
  margin-bottom: 0;
}

.c9 {
  width: 80%;
}

.c18 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  background-color: #f2f5fa;
  margin: 1.6rem auto;
}

.c18 > *:first-child {
  margin-top: 0;
}

.c18 > *:last-child {
  margin-bottom: 0;
}

@media print {
  .c10 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c11 {
    padding: 1.6rem 2rem;
  }
}

@media print {
  .c11 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c20 {
    padding: 1.6rem 2rem;
  }
}

@media print {
  .c20 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c14 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c14 {
    font-size: 2.8rem;
  }
}

@media (max-width:600px) {
  .c21 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c13 {
    margin-left: 0;
  }
}

@media (max-width:600px) {
  .c23 {
    font-size: 1.4rem;
  }
}

@media (max-width:600px) {
  .c16 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@media print {
  .c3 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c4 {
    font-size: 1.2rem;
  }

  .c4:not(:last-of-type) {
    display: none;
  }
}

@media (max-width:600px) {
  .c7 {
    -webkit-transform: rotate(180deg);
    -ms-transform: rotate(180deg);
    transform: rotate(180deg);
  }
}

@media print {
  .c8 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:980px) {
  .c9 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c18 {
    padding: 1.6rem 2rem;
  }
}

@media print {
  .c18 {
    padding: 0 5pt;
    border: none;
  }
}

<div>
  <nav
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <span
            class="c4"
          >
             
            <a
              class="c5"
              href="/"
              title="Retour à l'accueil"
            >
              <svg
                class="c6"
                fill="none"
                viewBox="0 0 16 16"
              >
                <path
                  d="M12 6.056L8.114 2.197a.166.166 0 00-.228 0L4 6.042v6.802c0 .087.069.153.154.153l7.693.015c.08 0 .153-.069.153-.154V6.056zm1 .88l.03 6.605c0 .254-.057.459-.317.459H3.5a.464.464 0 01-.47-.459L3 6.937l-1.208.993a.474.474 0 01-.662-.016.455.455 0 01.014-.65l6.519-6.132a.498.498 0 01.674 0l6.519 6.131a.455.455 0 01.014.651.472.472 0 01-.662.016L13 6.937z"
                  fill="currentColor"
                />
              </svg>
              Accueil
            </a>
          </span>
          <span
            class="c4"
          >
            <svg
              class="c7"
              fill="none"
              viewBox="0 0 16 16"
            >
              <path
                d="M11.37 7.37L5.296.26A.708.708 0 004.76 0a.708.708 0 00-.537.26A.973.973 0 004 .89c0 .236.08.462.223.63L9.759 8l-5.536 6.48a.972.972 0 00-.223.63c0 .236.08.463.223.63.142.166.335.26.537.26a.709.709 0 00.537-.26l6.072-7.11a.91.91 0 00.165-.29 1.021 1.021 0 000-.68.91.91 0 00-.165-.29z"
                fill="currentColor"
              />
            </svg>
             
            <a
              class="c5"
              href="/themes/tag-1"
              title="Voir le theme tag1"
            >
              tag1
            </a>
          </span>
          <span
            class="c4"
          >
            <svg
              class="c7"
              fill="none"
              viewBox="0 0 16 16"
            >
              <path
                d="M11.37 7.37L5.296.26A.708.708 0 004.76 0a.708.708 0 00-.537.26A.973.973 0 004 .89c0 .236.08.462.223.63L9.759 8l-5.536 6.48a.972.972 0 00-.223.63c0 .236.08.463.223.63.142.166.335.26.537.26a.709.709 0 00.537-.26l6.072-7.11a.91.91 0 00.165-.29 1.021 1.021 0 000-.68.91.91 0 00-.165-.29z"
                fill="currentColor"
              />
            </svg>
             
            <a
              class="c5"
              href="/themes/tag-2"
              title="Voir le theme tag2"
            >
              tag2
            </a>
          </span>
        </div>
      </div>
    </div>
  </nav>
  <div
    class="c8"
  >
    <div
      class="c9"
    >
      <div
        class="c10"
      >
        <div
          class="c11"
          data-main-content="true"
        >
          <span
            class="c12"
          >
            tag2
          </span>
          <header
            class="c13"
          >
            <h1
              class="c14"
            >
              <div
                class="c15"
              />
              Article du code
            </h1>
          </header>
          <div
            class="c16"
          >
            <span>
              Mis à jour le : 
              03/11/1979
            </span>
          </div>
          <div
            class="c17"
          >
            <div
              class="c18"
            >
              intro de l'article
            </div>
            <div>
              <p
                class="test-content"
              >
                Contenu au format 
                <strong>
                  html
                </strong>
              </p>
            </div>
            <div>
              Contenu supplémentaire
            </div>
          </div>
        </div>
      </div>
      <div
        class="c19"
      >
        <div
          class="c10"
        >
          <div
            class="c20"
          >
            <h3
              class="c21"
            >
              Avez-vous trouvé la réponse à votre question ?
            </h3>
            <p
              class="c22"
            >
              <button
                class="c23 c24 c25"
              >
                Non
              </button>
              <button
                class="c23 c24 c25"
              >
                Oui
              </button>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Answer /> should renders back to results link 1`] = `
.c2 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
}

.c2 > *:first-child {
  margin-top: 0;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c10 {
  padding: 2rem 0;
  color: #3e486e;
}

.c3 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  position: relative;
  padding: 4rem;
  background-color: #fff;
}

.c3:before {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: 100%;
  height: 30rem;
  border: none;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 5rem rgba(121,148,212,0.12),0 1rem 1.5rem rgba(121,148,212,0.1);
  content: "";
}

.c3 > *:first-child {
  margin-top: 0;
}

.c3 > *:last-child {
  margin-bottom: 0;
}

.c11 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  background-color: #f2f5fa;
}

.c11 > *:first-child {
  margin-top: 0;
}

.c11 > *:last-child {
  margin-bottom: 0;
}

.c6 {
  position: absolute;
  background-color: #7994d4;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c5 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 3.2rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 4rem;
}

.c12 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c4 {
  margin: 0 auto 1rem;
  margin-left: -4rem;
  text-align: left;
}

.c15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #7994d4;
  border-color: #7994d4;
  box-shadow: 0px 10px 30px rgba(121,148,212,0.26),0px 4px 5px rgba(121,148,212,0.35);
  opacity: 1;
}

.c15:link,
.c15:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c15:not([disabled]):hover,
.c15:not([disabled]):active,
.c15:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #a0b3e0;
  border-color: #a0b3e0;
}

.c15[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c14:hover .c18 {
  -webkit-transform: translateX(5px);
  -ms-transform: translateX(5px);
  transform: translateX(5px);
}

.c14:hover .c19 {
  -webkit-transform: translateX(5px);
  -ms-transform: translateX(5px);
  transform: translateX(5px);
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.4rem;
}

.c8 {
  margin: 3.2rem 0 0 0;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c17 + .c16 {
  margin-left: 1.6rem;
}

.c0 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  padding: 0;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  width: 80%;
}

.c9 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  background-color: #f2f5fa;
  margin: 1.6rem auto;
}

.c9 > *:first-child {
  margin-top: 0;
}

.c9 > *:last-child {
  margin-bottom: 0;
}

@media print {
  .c2 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c3 {
    padding: 1.6rem 2rem;
  }
}

@media print {
  .c3 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c11 {
    padding: 1.6rem 2rem;
  }
}

@media print {
  .c11 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c5 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c5 {
    font-size: 2.8rem;
  }
}

@media (max-width:600px) {
  .c12 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c4 {
    margin-left: 0;
  }
}

@media (max-width:600px) {
  .c15 {
    font-size: 1.4rem;
  }
}

@media (max-width:600px) {
  .c7 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:980px) {
  .c1 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c9 {
    padding: 1.6rem 2rem;
  }
}

@media print {
  .c9 {
    padding: 0 5pt;
    border: none;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
          data-main-content="true"
        >
          <header
            class="c4"
          >
            <h1
              class="c5"
            >
              <div
                class="c6"
              />
              Article du code
            </h1>
          </header>
          <div
            class="c7"
          >
            <span>
              Mis à jour le : 
              03/11/1979
            </span>
          </div>
          <div
            class="c8"
          >
            <div
              class="c9"
            >
              intro de l'article
            </div>
            <div>
              <p
                class="test-content"
              >
                Contenu au format 
                <strong>
                  html
                </strong>
              </p>
            </div>
            <div>
              Contenu supplémentaire
            </div>
          </div>
        </div>
      </div>
      <div
        class="c10"
      >
        <div
          class="c2"
        >
          <div
            class="c11"
          >
            <h3
              class="c12"
            >
              Avez-vous trouvé la réponse à votre question ?
            </h3>
            <p
              class="c13"
            >
              <button
                class="c14 c15 c16 c17"
              >
                Non
              </button>
              <button
                class="c14 c15 c16 c17"
              >
                Oui
              </button>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Answer /> should renders related content 1`] = `
.c2 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
}

.c2 > *:first-child {
  margin-top: 0;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c11 {
  padding: 2rem 0;
  color: #3e486e;
}

.c3 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  position: relative;
  padding: 4rem;
  background-color: #fff;
}

.c3:before {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: 100%;
  height: 30rem;
  border: none;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 5rem rgba(121,148,212,0.12),0 1rem 1.5rem rgba(121,148,212,0.1);
  content: "";
}

.c3 > *:first-child {
  margin-top: 0;
}

.c3 > *:last-child {
  margin-bottom: 0;
}

.c12 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  background-color: #f2f5fa;
}

.c12 > *:first-child {
  margin-top: 0;
}

.c12 > *:last-child {
  margin-bottom: 0;
}

.c6 {
  position: absolute;
  background-color: #7994d4;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c5 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 3.2rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 4rem;
}

.c13 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c28 {
  display: block;
  margin: 0 0 1rem 0;
  color: #4d73b8;
  font-weight: 600;
  font-size: 1.2rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
  text-transform: uppercase;
}

.c4 {
  margin: 0 auto 1rem;
  margin-left: -4rem;
  text-align: left;
}

.c37 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c39 {
  -webkit-flex: 0 1 auto;
  -ms-flex: 0 1 auto;
  flex: 0 1 auto;
  width: auto;
}

.c38 {
  -webkit-flex: 0 0 2.8rem;
  -ms-flex: 0 0 2.8rem;
  flex: 0 0 2.8rem;
  width: 2.8rem;
  height: 2.1rem;
  margin: 0 1.6rem 0 0;
  padding-top: 0.6rem;
  color: #f66663;
  -webkit-transition: -webkit-transform 250ms linear;
  -webkit-transition: transform 250ms linear;
  transition: transform 250ms linear;
}

.c36:hover .c38 {
  -webkit-transform: translateX(4px);
  -ms-transform: translateX(4px);
  transform: translateX(4px);
}

.c23 {
  position: absolute;
  top: 0;
  right: 0;
  width: 5rem;
  height: 5rem;
  overflow: hidden;
  color: #fff;
  border-radius: 0 0.6rem 0 0;
}

.c23:before {
  position: absolute;
  display: block;
  width: 0;
  height: 0;
  border-color: transparent #f66663 transparent transparent;
  border-style: solid;
  border-width: 0 5rem 5rem 0;
  content: "";
}

.c24 {
  position: absolute;
  top: 0;
  right: 0;
  z-index: 1;
  width: 3rem;
  height: 3rem;
}

.c16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #7994d4;
  border-color: #7994d4;
  box-shadow: 0px 10px 30px rgba(121,148,212,0.26),0px 4px 5px rgba(121,148,212,0.35);
  opacity: 1;
}

.c16:link,
.c16:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c16:not([disabled]):hover,
.c16:not([disabled]):active,
.c16:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #a0b3e0;
  border-color: #a0b3e0;
}

.c16[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c33 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  padding: 0;
  color: #f66663;
  font-weight: 600;
  font-size: 1.6rem;
  line-height: 1.625;
  text-align: left;
  background: none;
  border: none;
  border-radius: 0;
  overflow: visible;
}

.c33:focus,
.c33:hover,
.c33:active {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c34 {
  width: 2.6rem;
  height: 1.4rem;
  margin-left: 1rem;
  -webkit-transition: -webkit-transform 250ms linear;
  -webkit-transition: transform 250ms linear;
  transition: transform 250ms linear;
}

.c15:hover .c34 {
  -webkit-transform: translateX(5px);
  -ms-transform: translateX(5px);
  transform: translateX(5px);
}

.c35 {
  width: 2.6rem;
  height: 1.4rem;
  -webkit-transition: -webkit-transform 250ms linear;
  -webkit-transition: transform 250ms linear;
  transition: transform 250ms linear;
}

.c15:hover .c35 {
  -webkit-transform: translateX(5px);
  -ms-transform: translateX(5px);
  transform: translateX(5px);
}

.c21 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1;
  -ms-flex: 1 1;
  flex: 1 1;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  max-width: 100%;
  margin: 0;
  padding: 3.2rem 2rem;
  color: #3e486e;
  font-weight: normal;
  font-size: 1.6rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: #fff;
  border: none;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 5rem rgba(121,148,212,0.12),0 1rem 1.5rem rgba(121,148,212,0.1);
  cursor: pointer;
  -webkit-transition: box-shadow 250ms linear, -webkit-transform 100ms linear;
  -webkit-transition: box-shadow 250ms linear, transform 100ms linear;
  transition: box-shadow 250ms linear, transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c21:hover,
.c21:active,
.c21:focus {
  color: #3e486e;
  box-shadow: 0 1rem 5rem rgba(121,148,212,0.2),0 1rem 1.5rem rgba(121,148,212,0.25);
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
}

.c26 {
  width: 7.2rem;
  height: 7.2rem;
  margin: 0 auto 1.6rem;
  padding: 1.4rem;
  background-color: #f2f5fa;
  border-radius: 50%;
}

.c25 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c27 {
  padding-right: 1rem;
}

.c29 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
  margin: 0;
}

.c30 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  margin-top: 1rem;
}

.c10 {
  border-bottom: 1px dotted #7994d4;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.4rem;
}

.c8 {
  margin: 3.2rem 0 0 0;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c18 + .c17 {
  margin-left: 1.6rem;
}

.c31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  height: 100%;
}

.c32 {
  margin-top: 1rem;
}

.c19 {
  position: -webkit-sticky;
  position: sticky;
  top: 12rem;
  width: 30%;
  margin: 0;
  padding: 0 1.6rem 0 4rem;
  list-style-type: none;
}

.c19 > *:first-child {
  margin-top: 0;
}

.c22 {
  max-width: 28rem;
}

.c20 {
  margin: 1.6rem 0;
  padding: 0;
}

.c0 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  padding: 0;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  width: 70%;
}

.c9 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  background-color: #f2f5fa;
  margin: 1.6rem auto;
}

.c9 > *:first-child {
  margin-top: 0;
}

.c9 > *:last-child {
  margin-bottom: 0;
}

@media print {
  .c2 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c3 {
    padding: 1.6rem 2rem;
  }
}

@media print {
  .c3 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c12 {
    padding: 1.6rem 2rem;
  }
}

@media print {
  .c12 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c5 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c5 {
    font-size: 2.8rem;
  }
}

@media (max-width:600px) {
  .c13 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c4 {
    margin-left: 0;
  }
}

@media (max-width:600px) {
  .c16 {
    font-size: 1.4rem;
  }
}

@media (max-width:600px) {
  .c33 {
    font-size: 1.4rem;
  }
}

@media (max-width:600px) {
  .c21 {
    padding: 2rem 1.6rem;
    font-size: 1.4rem;
  }
}

@media (max-width:600px) {
  .c29 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c7 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@media (max-width:1180px) {
  .c19 {
    padding-left: 1.6rem;
  }
}

@media (max-width:980px) {
  .c19 {
    display: none;
  }
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:980px) {
  .c1 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c9 {
    padding: 1.6rem 2rem;
  }
}

@media print {
  .c9 {
    padding: 0 5pt;
    border: none;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
          data-main-content="true"
        >
          <header
            class="c4"
          >
            <h1
              class="c5"
            >
              <div
                class="c6"
              />
              Article du code
            </h1>
          </header>
          <div
            class="c7"
          >
            <span>
              Mis à jour le : 
              03/11/1979
            </span>
          </div>
          <div
            class="c8"
          >
            <div
              class="c9"
            >
              intro de l'article
            </div>
            <div>
              <p
                class="test-content"
              >
                <span
                  data-tooltip-ref="__tt__0"
                >
                  <span
                    class="c10"
                    data-reach-tooltip-trigger=""
                    tabindex="0"
                  >
                    annualisation du temps de travail
                  </span>
                </span>
                . 
                <span
                  data-tooltip-ref="__tt__1"
                >
                  <span
                    class="c10"
                    data-reach-tooltip-trigger=""
                    tabindex="0"
                  >
                    Annualisation
                  </span>
                </span>
                 de l'
                <span
                  data-tooltip-ref="__tt__2"
                >
                  <span
                    class="c10"
                    data-reach-tooltip-trigger=""
                    tabindex="0"
                  >
                    annualisation
                  </span>
                </span>
                .
              </p>
            </div>
            <div>
              Contenu supplémentaire
            </div>
          </div>
        </div>
      </div>
      <div
        class="c11"
      >
        <div
          class="c2"
        >
          <div
            class="c12"
          >
            <h3
              class="c13"
            >
              Avez-vous trouvé la réponse à votre question ?
            </h3>
            <p
              class="c14"
            >
              <button
                class="c15 c16 c17 c18"
              >
                Non
              </button>
              <button
                class="c15 c16 c17 c18"
              >
                Oui
              </button>
            </p>
          </div>
        </div>
      </div>
    </div>
    <ul
      class="c19"
    >
      <li
        class="c20"
      >
        <a
          class="c21 c22"
          href="/modeles-de-courriers/LETTER_1"
        >
          <div
            class="c23"
          >
            <div
              class="c24"
            >
              <svg
                fill="none"
                viewBox="0 0 32 32"
              >
                <path
                  clip-rule="evenodd"
                  d="M11.938 16.5a3.548 3.548 0 013.562-3.563 3.548 3.548 0 013.563 3.563 3.548 3.548 0 01-3.563 3.563 3.548 3.548 0 01-3.563-3.563zm2.062 0c0 .84.66 1.5 1.5 1.5s1.5-.66 1.5-1.5-.66-1.5-1.5-1.5-1.5.66-1.5 1.5z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M25 14.838v3.404l-1.663.87-.474 1.109.554 1.82-2.375 2.376-1.9-.555-1.109.476-.87 1.662h-3.405l-.87-1.663-1.109-.474-1.82.554-2.376-2.375.554-1.9-.475-1.109L6 18.163v-3.405l1.662-.87.475-1.109-.554-1.82 2.375-2.376 1.9.554 1.109-.475.87-1.662h3.405l.87 1.662 1.109.475 1.82-.554 2.376 2.375-.555 1.9.476 1.109 1.662.87zm-4.1 5.112l.825-2.025L23 17.25v-1.5l-1.2-.6-.825-2.025.375-1.35-1.05-1.05-1.35.375-2.025-.825L16.25 9h-1.5l-.6 1.2-2.025.825-1.35-.375-1.05 1.05.375 1.35-.825 2.025L8 15.75v1.5l1.2.6.825 2.025-.375 1.35 1.05 1.05 1.35-.375 2.025.825L14.75 24h1.5l.6-1.2 2.025-.825 1.35.375 1.05-1.05-.375-1.35z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
          <div
            class="c25"
          >
            <div
              class="c26"
            >
              <svg
                fill="none"
                viewBox="0 0 52 52"
              >
                <path
                  clip-rule="evenodd"
                  d="M26.567 3.89L32.544 8H42a1 1 0 011 1v6.188l6.566 4.514a1 1 0 01.434.824V47a1 1 0 01-1 1H3a1 1 0 01-1-1V20.526a1 1 0 01.433-.824L9 15.188V9a1 1 0 011-1h9.455l5.979-4.11a1 1 0 011.133 0zM22.985 8h6.03L26 5.927 22.985 8zM9 17.615l-5 3.437v.323l5 3.438v-7.198zm2 8.573l10.537 7.244 2.873-1.796a3 3 0 013.18 0l2.873 1.796L41 26.188V10H11v16.188zm32-1.375l5-3.438v-.323l-5-3.437v7.198zm5-1.01L32.313 34.586 48 44.392v-20.59zM4 44.391l15.687-9.805L4 23.802v20.59zm21.47-11.06L5.2 46h41.6L26.53 33.332a1 1 0 00-1.06 0z"
                  fill="#4E6896"
                  fill-rule="evenodd"
                />
                <path
                  d="M16 17c0-.552.471-1 1.053-1h17.894c.582 0 1.053.448 1.053 1s-.471 1-1.053 1H17.053C16.47 18 16 17.552 16 17zm1.053 5C16.47 22 16 22.448 16 23s.471 1 1.053 1h17.894C35.53 24 36 23.552 36 23s-.471-1-1.053-1H17.053z"
                  fill="#FF7067"
                />
              </svg>
            </div>
            <div
              class="c27"
            >
              <span
                class="c28"
              >
                Modèles de documents
              </span>
              <h3
                class="c29"
              >
                related letter title 1
              </h3>
            </div>
          </div>
          <div
            class="c30"
          >
            <div
              class="c31"
            >
              <div
                class="c32"
              >
                <div
                  class="c15 c33"
                >
                  Consulter
                  <svg
                    class="c34"
                    fill="none"
                    viewBox="0 0 28 15"
                  >
                    <path
                      d="M27.875 7.153l-6-6.284a.526.526 0 00-.711-.023.496.496 0 00-.024.688l5.204 5.468H.5c-.276 0-.5.217-.5.484s.224.483.5.483h25.844l-5.204 5.469a.493.493 0 00.024.687.52.52 0 00.711-.023l6-6.284a.506.506 0 000-.665z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </a>
      </li>
      <li
        class="c20"
      >
        <a
          class="c21 c22"
          href="/outils/TOOL_1"
        >
          <div
            class="c23"
          >
            <div
              class="c24"
            >
              <svg
                fill="none"
                viewBox="0 0 32 32"
              >
                <path
                  clip-rule="evenodd"
                  d="M11.938 16.5a3.548 3.548 0 013.562-3.563 3.548 3.548 0 013.563 3.563 3.548 3.548 0 01-3.563 3.563 3.548 3.548 0 01-3.563-3.563zm2.062 0c0 .84.66 1.5 1.5 1.5s1.5-.66 1.5-1.5-.66-1.5-1.5-1.5-1.5.66-1.5 1.5z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M25 14.838v3.404l-1.663.87-.474 1.109.554 1.82-2.375 2.376-1.9-.555-1.109.476-.87 1.662h-3.405l-.87-1.663-1.109-.474-1.82.554-2.376-2.375.554-1.9-.475-1.109L6 18.163v-3.405l1.662-.87.475-1.109-.554-1.82 2.375-2.376 1.9.554 1.109-.475.87-1.662h3.405l.87 1.662 1.109.475 1.82-.554 2.376 2.375-.555 1.9.476 1.109 1.662.87zm-4.1 5.112l.825-2.025L23 17.25v-1.5l-1.2-.6-.825-2.025.375-1.35-1.05-1.05-1.35.375-2.025-.825L16.25 9h-1.5l-.6 1.2-2.025.825-1.35-.375-1.05 1.05.375 1.35-.825 2.025L8 15.75v1.5l1.2.6.825 2.025-.375 1.35 1.05 1.05 1.35-.375 2.025.825L14.75 24h1.5l.6-1.2 2.025-.825 1.35.375 1.05-1.05-.375-1.35z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
          <div
            class="c25"
          >
            <div
              class="c27"
            >
              <span
                class="c28"
              >
                Outils
              </span>
              <h3
                class="c29"
              >
                related tool title 1
              </h3>
            </div>
          </div>
          <div
            class="c30"
          >
            <div
              class="c31"
            >
              <div
                class="c32"
              >
                <div
                  class="c15 c33"
                >
                  
                  <svg
                    class="c35"
                    fill="none"
                    viewBox="0 0 28 15"
                  >
                    <path
                      d="M27.875 7.153l-6-6.284a.526.526 0 00-.711-.023.496.496 0 00-.024.688l5.204 5.468H.5c-.276 0-.5.217-.5.484s.224.483.5.483h25.844l-5.204 5.469a.493.493 0 00.024.687.52.52 0 00.711-.023l6-6.284a.506.506 0 000-.665z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </a>
      </li>
      <li
        class="c20"
      >
        <a
          class="c21 c22"
          href="url.extrenal/tool"
          rel="noopener nofollow"
          target="_blank"
        >
          <div
            class="c23"
          >
            <div
              class="c24"
            >
              <svg
                fill="none"
                viewBox="0 0 32 32"
              >
                <path
                  clip-rule="evenodd"
                  d="M11.938 16.5a3.548 3.548 0 013.562-3.563 3.548 3.548 0 013.563 3.563 3.548 3.548 0 01-3.563 3.563 3.548 3.548 0 01-3.563-3.563zm2.062 0c0 .84.66 1.5 1.5 1.5s1.5-.66 1.5-1.5-.66-1.5-1.5-1.5-1.5.66-1.5 1.5z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
                <path
                  clip-rule="evenodd"
                  d="M25 14.838v3.404l-1.663.87-.474 1.109.554 1.82-2.375 2.376-1.9-.555-1.109.476-.87 1.662h-3.405l-.87-1.663-1.109-.474-1.82.554-2.376-2.375.554-1.9-.475-1.109L6 18.163v-3.405l1.662-.87.475-1.109-.554-1.82 2.375-2.376 1.9.554 1.109-.475.87-1.662h3.405l.87 1.662 1.109.475 1.82-.554 2.376 2.375-.555 1.9.476 1.109 1.662.87zm-4.1 5.112l.825-2.025L23 17.25v-1.5l-1.2-.6-.825-2.025.375-1.35-1.05-1.05-1.35.375-2.025-.825L16.25 9h-1.5l-.6 1.2-2.025.825-1.35-.375-1.05 1.05.375 1.35-.825 2.025L8 15.75v1.5l1.2.6.825 2.025-.375 1.35 1.05 1.05 1.35-.375 2.025.825L14.75 24h1.5l.6-1.2 2.025-.825 1.35.375 1.05-1.05-.375-1.35z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </div>
          <div
            class="c25"
          >
            <div
              class="c27"
            >
              
              <h3
                class="c29"
              >
                related external title 1
              </h3>
            </div>
          </div>
          <div
            class="c30"
          >
            <div
              class="c31"
            >
              <div
                class="c32"
              >
                <div
                  class="c15 c33"
                >
                  
                  <svg
                    class="c35"
                    fill="none"
                    viewBox="0 0 28 15"
                  >
                    <path
                      d="M27.875 7.153l-6-6.284a.526.526 0 00-.711-.023.496.496 0 00-.024.688l5.204 5.468H.5c-.276 0-.5.217-.5.484s.224.483.5.483h25.844l-5.204 5.469a.493.493 0 00.024.687.52.52 0 00.711-.023l6-6.284a.506.506 0 000-.665z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </a>
      </li>
      <span>
        Les articles pouvant vous intéresser :
      </span>
      <li
        class="c20"
      >
        <a
          class="c36 c37"
          href="/fiche-service-public/LINK_1"
        >
          <svg
            class="c38"
            fill="none"
            viewBox="0 0 28 15"
          >
            <path
              d="M27.875 7.153l-6-6.284a.526.526 0 00-.711-.023.496.496 0 00-.024.688l5.204 5.468H.5c-.276 0-.5.217-.5.484s.224.483.5.483h25.844l-5.204 5.469a.493.493 0 00.024.687.52.52 0 00.711-.023l6-6.284a.506.506 0 000-.665z"
              fill="currentColor"
            />
          </svg>
          <span
            class="c39"
          >
            related sheet sp title 1
          </span>
        </a>
      </li>
      <li
        class="c20"
      >
        <a
          class="c36 c37"
          href="/fiche-ministere-travail/LINK_2"
        >
          <svg
            class="c38"
            fill="none"
            viewBox="0 0 28 15"
          >
            <path
              d="M27.875 7.153l-6-6.284a.526.526 0 00-.711-.023.496.496 0 00-.024.688l5.204 5.468H.5c-.276 0-.5.217-.5.484s.224.483.5.483h25.844l-5.204 5.469a.493.493 0 00.024.687.52.52 0 00.711-.023l6-6.284a.506.506 0 000-.665z"
              fill="currentColor"
            />
          </svg>
          <span
            class="c39"
          >
            related sheet mt title 1
          </span>
        </a>
      </li>
      <li
        class="c20"
      >
        <a
          class="c36 c37"
          href="/external/LINK_3"
        >
          <svg
            class="c38"
            fill="none"
            viewBox="0 0 28 15"
          >
            <path
              d="M27.875 7.153l-6-6.284a.526.526 0 00-.711-.023.496.496 0 00-.024.688l5.204 5.468H.5c-.276 0-.5.217-.5.484s.224.483.5.483h25.844l-5.204 5.469a.493.493 0 00.024.687.52.52 0 00.711-.023l6-6.284a.506.506 0 000-.665z"
              fill="currentColor"
            />
          </svg>
          <span
            class="c39"
          >
            related external title 1
          </span>
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`<Answer /> should renders tooltip 1`] = `
.c2 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
}

.c2 > *:first-child {
  margin-top: 0;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c11 {
  padding: 2rem 0;
  color: #3e486e;
}

.c3 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  position: relative;
  padding: 4rem;
  background-color: #fff;
}

.c3:before {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: 100%;
  height: 30rem;
  border: none;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 5rem rgba(121,148,212,0.12),0 1rem 1.5rem rgba(121,148,212,0.1);
  content: "";
}

.c3 > *:first-child {
  margin-top: 0;
}

.c3 > *:last-child {
  margin-bottom: 0;
}

.c12 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  background-color: #f2f5fa;
}

.c12 > *:first-child {
  margin-top: 0;
}

.c12 > *:last-child {
  margin-bottom: 0;
}

.c6 {
  position: absolute;
  background-color: #7994d4;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c5 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 3.2rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 4rem;
}

.c13 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c4 {
  margin: 0 auto 1rem;
  margin-left: -4rem;
  text-align: left;
}

.c15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #7994d4;
  border-color: #7994d4;
  box-shadow: 0px 10px 30px rgba(121,148,212,0.26),0px 4px 5px rgba(121,148,212,0.35);
  opacity: 1;
}

.c15:link,
.c15:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c15:not([disabled]):hover,
.c15:not([disabled]):active,
.c15:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #a0b3e0;
  border-color: #a0b3e0;
}

.c15[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c10 {
  border-bottom: 1px dotted #7994d4;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.4rem;
}

.c8 {
  margin: 3.2rem 0 0 0;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c17 + .c16 {
  margin-left: 1.6rem;
}

.c0 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  padding: 0;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  width: 80%;
}

.c9 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  background-color: #f2f5fa;
  margin: 1.6rem auto;
}

.c9 > *:first-child {
  margin-top: 0;
}

.c9 > *:last-child {
  margin-bottom: 0;
}

@media print {
  .c2 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c3 {
    padding: 1.6rem 2rem;
  }
}

@media print {
  .c3 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c12 {
    padding: 1.6rem 2rem;
  }
}

@media print {
  .c12 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c5 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c5 {
    font-size: 2.8rem;
  }
}

@media (max-width:600px) {
  .c13 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c4 {
    margin-left: 0;
  }
}

@media (max-width:600px) {
  .c15 {
    font-size: 1.4rem;
  }
}

@media (max-width:600px) {
  .c7 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:980px) {
  .c1 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c9 {
    padding: 1.6rem 2rem;
  }
}

@media print {
  .c9 {
    padding: 0 5pt;
    border: none;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
          data-main-content="true"
        >
          <header
            class="c4"
          >
            <h1
              class="c5"
            >
              <div
                class="c6"
              />
              Article du code
            </h1>
          </header>
          <div
            class="c7"
          >
            <span>
              Mis à jour le : 
              03/11/1979
            </span>
          </div>
          <div
            class="c8"
          >
            <div
              class="c9"
            >
              intro de l'article
            </div>
            <div>
              <p
                class="test-content"
              >
                Contenu au format 
                <strong>
                  html
                </strong>
                 contenant des tooltip sur certains mot comme 
                <span
                  data-tooltip-ref="__tt__2"
                >
                  <span
                    class="c10"
                    data-reach-tooltip-trigger=""
                    tabindex="0"
                  >
                    rescrit
                  </span>
                </span>
                . match aussi les abbréviation comme 
                <span
                  data-tooltip-ref="__tt__1"
                >
                  <span
                    class="c10"
                    data-reach-tooltip-trigger=""
                    tabindex="0"
                  >
                    APE
                  </span>
                </span>
                 mais pas ape ou ses variantes comme 
                <span
                  data-tooltip-ref="__tt__0"
                >
                  <span
                    class="c10"
                    data-reach-tooltip-trigger=""
                    tabindex="0"
                  >
                    code ape
                  </span>
                </span>
              </p>
            </div>
            <div>
              Contenu supplémentaire
            </div>
          </div>
        </div>
      </div>
      <div
        class="c11"
      >
        <div
          class="c2"
        >
          <div
            class="c12"
          >
            <h3
              class="c13"
            >
              Avez-vous trouvé la réponse à votre question ?
            </h3>
            <p
              class="c14"
            >
              <button
                class="c15 c16 c17"
              >
                Non
              </button>
              <button
                class="c15 c16 c17"
              >
                Oui
              </button>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Answer /> should renders tooltip for words with diacritics without breaking html 1`] = `
.c2 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
}

.c2 > *:first-child {
  margin-top: 0;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c11 {
  padding: 2rem 0;
  color: #3e486e;
}

.c3 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  position: relative;
  padding: 4rem;
  background-color: #fff;
}

.c3:before {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: 100%;
  height: 30rem;
  border: none;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 5rem rgba(121,148,212,0.12),0 1rem 1.5rem rgba(121,148,212,0.1);
  content: "";
}

.c3 > *:first-child {
  margin-top: 0;
}

.c3 > *:last-child {
  margin-bottom: 0;
}

.c12 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  background-color: #f2f5fa;
}

.c12 > *:first-child {
  margin-top: 0;
}

.c12 > *:last-child {
  margin-bottom: 0;
}

.c6 {
  position: absolute;
  background-color: #7994d4;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c5 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 3.2rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 4rem;
}

.c13 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c4 {
  margin: 0 auto 1rem;
  margin-left: -4rem;
  text-align: left;
}

.c15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #7994d4;
  border-color: #7994d4;
  box-shadow: 0px 10px 30px rgba(121,148,212,0.26),0px 4px 5px rgba(121,148,212,0.35);
  opacity: 1;
}

.c15:link,
.c15:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c15:not([disabled]):hover,
.c15:not([disabled]):active,
.c15:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #a0b3e0;
  border-color: #a0b3e0;
}

.c15[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c10 {
  border-bottom: 1px dotted #7994d4;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.4rem;
}

.c8 {
  margin: 3.2rem 0 0 0;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c17 + .c16 {
  margin-left: 1.6rem;
}

.c0 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  padding: 0;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  width: 80%;
}

.c9 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  background-color: #f2f5fa;
  margin: 1.6rem auto;
}

.c9 > *:first-child {
  margin-top: 0;
}

.c9 > *:last-child {
  margin-bottom: 0;
}

@media print {
  .c2 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c3 {
    padding: 1.6rem 2rem;
  }
}

@media print {
  .c3 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c12 {
    padding: 1.6rem 2rem;
  }
}

@media print {
  .c12 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c5 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c5 {
    font-size: 2.8rem;
  }
}

@media (max-width:600px) {
  .c13 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c4 {
    margin-left: 0;
  }
}

@media (max-width:600px) {
  .c15 {
    font-size: 1.4rem;
  }
}

@media (max-width:600px) {
  .c7 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:980px) {
  .c1 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c9 {
    padding: 1.6rem 2rem;
  }
}

@media print {
  .c9 {
    padding: 0 5pt;
    border: none;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
          data-main-content="true"
        >
          <header
            class="c4"
          >
            <h1
              class="c5"
            >
              <div
                class="c6"
              />
              Article du code
            </h1>
          </header>
          <div
            class="c7"
          >
            <span>
              Mis à jour le : 
              03/11/1979
            </span>
          </div>
          <div
            class="c8"
          >
            <div
              class="c9"
            >
              intro de l'article
            </div>
            <div>
              <p
                class="test-content"
              >
                Contenu au format 
                <strong>
                  <span
                    data-tooltip-ref="__tt__1"
                  >
                    <span
                      class="c10"
                      data-reach-tooltip-trigger=""
                      tabindex="0"
                    >
                      indemnités
                    </span>
                  </span>
                </strong>
                comme 
                <span
                  data-tooltip-ref="__tt__0"
                >
                  <span
                    class="c10"
                    data-reach-tooltip-trigger=""
                    tabindex="0"
                  >
                    code ape
                  </span>
                </span>
              </p>
            </div>
            <div>
              Contenu supplémentaire
            </div>
          </div>
        </div>
      </div>
      <div
        class="c11"
      >
        <div
          class="c2"
        >
          <div
            class="c12"
          >
            <h3
              class="c13"
            >
              Avez-vous trouvé la réponse à votre question ?
            </h3>
            <p
              class="c14"
            >
              <button
                class="c15 c16 c17"
              >
                Non
              </button>
              <button
                class="c15 c16 c17"
              >
                Oui
              </button>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Answer /> should renders tooltip without breaking a tag 1`] = `
.c2 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
}

.c2 > *:first-child {
  margin-top: 0;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c11 {
  padding: 2rem 0;
  color: #3e486e;
}

.c3 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  position: relative;
  padding: 4rem;
  background-color: #fff;
}

.c3:before {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: 100%;
  height: 30rem;
  border: none;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 5rem rgba(121,148,212,0.12),0 1rem 1.5rem rgba(121,148,212,0.1);
  content: "";
}

.c3 > *:first-child {
  margin-top: 0;
}

.c3 > *:last-child {
  margin-bottom: 0;
}

.c12 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  background-color: #f2f5fa;
}

.c12 > *:first-child {
  margin-top: 0;
}

.c12 > *:last-child {
  margin-bottom: 0;
}

.c6 {
  position: absolute;
  background-color: #7994d4;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c5 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 3.2rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 4rem;
}

.c13 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c4 {
  margin: 0 auto 1rem;
  margin-left: -4rem;
  text-align: left;
}

.c15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #7994d4;
  border-color: #7994d4;
  box-shadow: 0px 10px 30px rgba(121,148,212,0.26),0px 4px 5px rgba(121,148,212,0.35);
  opacity: 1;
}

.c15:link,
.c15:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c15:not([disabled]):hover,
.c15:not([disabled]):active,
.c15:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #a0b3e0;
  border-color: #a0b3e0;
}

.c15[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c10 {
  border-bottom: 1px dotted #7994d4;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.4rem;
}

.c8 {
  margin: 3.2rem 0 0 0;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c17 + .c16 {
  margin-left: 1.6rem;
}

.c0 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  padding: 0;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  width: 80%;
}

.c9 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  background-color: #f2f5fa;
  margin: 1.6rem auto;
}

.c9 > *:first-child {
  margin-top: 0;
}

.c9 > *:last-child {
  margin-bottom: 0;
}

@media print {
  .c2 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c3 {
    padding: 1.6rem 2rem;
  }
}

@media print {
  .c3 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c12 {
    padding: 1.6rem 2rem;
  }
}

@media print {
  .c12 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c5 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c5 {
    font-size: 2.8rem;
  }
}

@media (max-width:600px) {
  .c13 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c4 {
    margin-left: 0;
  }
}

@media (max-width:600px) {
  .c15 {
    font-size: 1.4rem;
  }
}

@media (max-width:600px) {
  .c7 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:980px) {
  .c1 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c9 {
    padding: 1.6rem 2rem;
  }
}

@media print {
  .c9 {
    padding: 0 5pt;
    border: none;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
          data-main-content="true"
        >
          <header
            class="c4"
          >
            <h1
              class="c5"
            >
              <div
                class="c6"
              />
              Article du code
            </h1>
          </header>
          <div
            class="c7"
          >
            <span>
              Mis à jour le : 
              03/11/1979
            </span>
          </div>
          <div
            class="c8"
          >
            <div
              class="c9"
            >
              intro de l'article
            </div>
            <div>
              <p
                class="test-content"
              >
                <a
                  class="spip_in"
                  href="emploi/accompagnement-des-mutations-economiques/csp"
                >
                  le contrat de sécurisation professionnelle 
                  <span
                    data-tooltip-ref="__tt__0"
                  >
                    <span
                      class="c10"
                      data-reach-tooltip-trigger=""
                      tabindex="0"
                    >
                      APE
                    </span>
                  </span>
                </a>
              </p>
            </div>
            <div>
              Contenu supplémentaire
            </div>
          </div>
        </div>
      </div>
      <div
        class="c11"
      >
        <div
          class="c2"
        >
          <div
            class="c12"
          >
            <h3
              class="c13"
            >
              Avez-vous trouvé la réponse à votre question ?
            </h3>
            <p
              class="c14"
            >
              <button
                class="c15 c16 c17"
              >
                Non
              </button>
              <button
                class="c15 c16 c17"
              >
                Oui
              </button>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Answer /> should renders tooltip without breaking previous word 1`] = `
.c2 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
}

.c2 > *:first-child {
  margin-top: 0;
}

.c2 > *:last-child {
  margin-bottom: 0;
}

.c11 {
  padding: 2rem 0;
  color: #3e486e;
}

.c3 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  position: relative;
  padding: 4rem;
  background-color: #fff;
}

.c3:before {
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: 100%;
  height: 30rem;
  border: none;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 5rem rgba(121,148,212,0.12),0 1rem 1.5rem rgba(121,148,212,0.1);
  content: "";
}

.c3 > *:first-child {
  margin-top: 0;
}

.c3 > *:last-child {
  margin-bottom: 0;
}

.c12 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  background-color: #f2f5fa;
}

.c12 > *:first-child {
  margin-top: 0;
}

.c12 > *:last-child {
  margin-bottom: 0;
}

.c6 {
  position: absolute;
  background-color: #7994d4;
  border-radius: 0.6rem;
  top: 50%;
  left: 0;
  width: 0.4rem;
  height: 100%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

.c5 {
  position: relative;
  margin: 0;
  color: #2f3b6c;
  font-weight: normal;
  font-size: 3.2rem;
  font-family: "Merriweather",serif;
  line-height: 1.25;
  padding-left: 4rem;
}

.c13 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c4 {
  margin: 0 auto 1rem;
  margin-left: -4rem;
  text-align: left;
}

.c15 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: content-box;
  font-weight: 500;
  font-size: 1.6rem;
  line-height: 1.125em;
  text-align: center;
  vertical-align: middle;
  border: 1px solid;
  border-radius: 0.6rem;
  cursor: pointer;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,-webkit-transform 100ms linear;
  -webkit-transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  transition: background-color 250ms linear, border-color 250ms linear,transform 100ms linear;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  height: 5.2rem;
  padding: 0 4.4rem;
  color: #fff;
  background: #7994d4;
  border-color: #7994d4;
  box-shadow: 0px 10px 30px rgba(121,148,212,0.26),0px 4px 5px rgba(121,148,212,0.35);
  opacity: 1;
}

.c15:link,
.c15:visited {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c15:not([disabled]):hover,
.c15:not([disabled]):active,
.c15:not([disabled]):focus {
  opacity: 1;
  -webkit-transform: translateY(-2px);
  -ms-transform: translateY(-2px);
  transform: translateY(-2px);
  background: #a0b3e0;
  border-color: #a0b3e0;
}

.c15[disabled] {
  color: rgba(255,255,255,0.4);
  box-shadow: none;
  cursor: not-allowed;
}

.c10 {
  border-bottom: 1px dotted #7994d4;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.4rem;
}

.c8 {
  margin: 3.2rem 0 0 0;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c17 + .c16 {
  margin-left: 1.6rem;
}

.c0 {
  max-width: 124rem;
  margin: 0 auto;
  padding: 0 2rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  padding: 0;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  width: 80%;
}

.c9 {
  padding: 2rem 2.4rem;
  color: #3e486e;
  border-radius: 0.6rem;
  background-color: #f2f5fa;
  margin: 1.6rem auto;
}

.c9 > *:first-child {
  margin-top: 0;
}

.c9 > *:last-child {
  margin-bottom: 0;
}

@media print {
  .c2 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:600px) {
  .c3 {
    padding: 1.6rem 2rem;
  }
}

@media print {
  .c3 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c12 {
    padding: 1.6rem 2rem;
  }
}

@media print {
  .c12 {
    padding: 0 5pt;
    border: none;
  }
}

@media (max-width:600px) {
  .c5 {
    padding-left: 1.6rem;
  }
}

@media (max-width:600px) {
  .c5 {
    font-size: 2.8rem;
  }
}

@media (max-width:600px) {
  .c13 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c4 {
    margin-left: 0;
  }
}

@media (max-width:600px) {
  .c15 {
    font-size: 1.4rem;
  }
}

@media (max-width:600px) {
  .c7 {
    -webkit-flex-flow: column;
    -ms-flex-flow: column;
    flex-flow: column;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

@media (max-width:980px) {
  .c1 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c9 {
    padding: 1.6rem 2rem;
  }
}

@media print {
  .c9 {
    padding: 0 5pt;
    border: none;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
          data-main-content="true"
        >
          <header
            class="c4"
          >
            <h1
              class="c5"
            >
              <div
                class="c6"
              />
              Article du code
            </h1>
          </header>
          <div
            class="c7"
          >
            <span>
              Mis à jour le : 
              03/11/1979
            </span>
          </div>
          <div
            class="c8"
          >
            <div
              class="c9"
            >
              intro de l'article
            </div>
            <div>
              <p
                class="test-content"
              >
                <span
                  data-tooltip-ref="__tt__0"
                >
                  <span
                    class="c10"
                    data-reach-tooltip-trigger=""
                    tabindex="0"
                  >
                    annualisation du temps de travail
                  </span>
                </span>
                . 
                <span
                  data-tooltip-ref="__tt__1"
                >
                  <span
                    class="c10"
                    data-reach-tooltip-trigger=""
                    tabindex="0"
                  >
                    Annualisation
                  </span>
                </span>
                 de l'
                <span
                  data-tooltip-ref="__tt__2"
                >
                  <span
                    class="c10"
                    data-reach-tooltip-trigger=""
                    tabindex="0"
                  >
                    annualisation
                  </span>
                </span>
                .
              </p>
            </div>
            <div>
              Contenu supplémentaire
            </div>
          </div>
        </div>
      </div>
      <div
        class="c11"
      >
        <div
          class="c2"
        >
          <div
            class="c12"
          >
            <h3
              class="c13"
            >
              Avez-vous trouvé la réponse à votre question ?
            </h3>
            <p
              class="c14"
            >
              <button
                class="c15 c16 c17"
              >
                Non
              </button>
              <button
                class="c15 c16 c17"
              >
                Oui
              </button>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
